log
Sat, Apr 19, 2025  6:36:07 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  7:45:30 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
eada24c
Sat, Apr 19, 2025  7:45:53 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
52843ab
Sat, Apr 19, 2025  7:46:15 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2407bf1
Sat, Apr 19, 2025  7:47:42 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5566438
